--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@
 
 # misc
 .DS_Store
+.vscode
 *.pem
 
 # debug
@@ -39,3 +40,4 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+*.db
